# cccat

./: CMakeLists.txt  README.md  build.sh
include/: helper.hpp
src/: helper.cpp  main.cpp
tests/: catch.hpp  test.sh  test_add.cpp
